ctowasm/test/samples/error/initializer/global/non_constant_element.c
// Data segment intialization without constant expression
int a = 10;
struct B { int x; int y;} x = {a};
int main() {}